refactor: don't use STR interpolation preview, it was removed in newer JDK releases